v2, diseño terminado y adaptado a celulares, falta adaptar a dispositivos más grandes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Daniel">
+    <meta name="description" content="Lleva tu vida a otro nivel manteniendo tu salud">
+    <meta name="keywords" content="estilo de vida, vida saludable, alimentación sana">
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- Google Fonts -->
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+    <link href = "https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap" rel = "hoja de estilo">      
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="header__title">
-            <h2>Avion Shack</h2>
+            <h2>Avon Styles</h2>
         </div>
         <div class="nav">
             <nav>
@@ -22,85 +31,88 @@
             </nav>
         </div>
     </header>
-    
-    <section class="section-1">
-        <div class="fondo__principal">
-            <div class="fondo__principal--subtitle">
-                <h2>Te ayudaré a mejorar tu estilos de  vida...</h2>
-            </div>
-            <div class="fondo__principal--text">
-                <p>
-                    Vive tu vida con una salud saludable
-                </p>
-            </div>
-        </div>
-    </section>
-    <hr>
-    <section class="section-2">
-        <div class="home">
-            <div class="home__container--1">
-                <h2>Your Life Your Decision</h2>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat eaque quia suscipit maiores optio eos, iste expedita dolorem blanditiis <b>itaque labore aut, enim ducimus voluptate facilis ipsa necessitatibus!</b> Sapiente aliquam vero officia aut ducimus, enim soluta nesciunt illo laborum sit. <a href="Read Moore"></a>
-                </p>
-                <figure class="home__container--1-figure">
-                    <!-- <img src="https://images.pexels.com/photos/1435735/pexels-photo-1435735.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="imagen de frutas y naranjas"> -->
-                </figure>
-                <figure class="home__container--1-figure-2">
-                    <!-- <img src="https://images.pexels.com/photos/4117545/pexels-photo-4117545.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="imagen de aguacates y espinacas"> -->
-                </figure>
-                <div class="home__investigations">
+    <main>
+        <section class="section-1">
+            <div class="fondo__principal">
+                <div class="fondo__principal--subtitle">
+                    <h2>Te ayudaré a mejorar tu estilo de  vida...</h2>
+                </div>
+                <div class="fondo__principal--text">
                     <p>
-                        In the following links you can read research done by experts in lifestyles that will surely be of interest to you:
+                        "Vive tu vida con una salud saludable"
                     </p>
-                    <a href="">www.falselink.com/website.life</a>
-                    <a href="">www.falselink.com/website.life</a>
-                    <a href="">www.falselink.com/website.life</a>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="section-3">
-        <div class="me">
-            <div class="me__subtitle">
-                <h2>Who <span>I</span>Am</h2>
+        </section>
+        <hr class="line-1">
+        <section class="section-2">
+            <div class="home">
+                <div class="home__container--1">
+                    <h2>Your Life Your Decision</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat eaque quia suscipit maiores optio eos, iste expedita dolorem blanditiis <b>itaque labore aut, enim ducimus voluptate facilis ipsa necessitatibus!</b> Sapiente aliquam vero officia aut ducimus, enim soluta nesciunt illo laborum sit.<br><br>
+                    </p>
+                    <figure class="home__container--1-figure">
+                        <img src="https://images.pexels.com/photos/1435735/pexels-photo-1435735.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="imagen de frutas y naranjas">
+                    </figure>
+                    <figure class="home__container--1-figure-2">
+                        <img src="https://images.pexels.com/photos/4117545/pexels-photo-4117545.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="imagen de aguacates y espinacas">
+                    </figure>
+                    <div class="home__investigations">
+                        <p>
+                            In the following links you can read research done by experts in lifestyles that will surely be of interest to you:
+                        </p>
+                        <br>
+                        <a href="">www.falselink.com/website.life</a>
+                        <a href="">www.falselink.com/website.life</a>
+                        <a href="">www.falselink.com/website.life</a>
+                    </div>
+                </div>
             </div>
-            <figure class="me__image">
-                <img src="" alt="">
-            </figure>
-            <div class="me__text">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tempore aliquid sequi voluptatem doloribus omnis? Neque eaque consectetur similique ex dicta in nesciunt, corrupti, est adipisci illum deleniti asperiores. Necessitatibus soluta molestias incidunt! Architecto dolor aut eaque error, necessitatibus at tempora molestias laboriosam officiis sed facere aliquid inventore itaque nostrum voluptatem sunt placeat magni non. Ullam tenetur sunt voluptatem provident?
-                </p>
+        </section>
+        <section class="section-3">
+            <div class="me">
+                <div class="me__subtitle">
+                    <h2>Who <span>I</span> Am</h2>
+                </div>
+                <figure class="me__image">
+                    <img src="https://images.pexels.com/photos/3453083/pexels-photo-3453083.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                </figure>
+                <div class="me__text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tempore aliquid sequi voluptatem doloribus omnis? Neque eaque consectetur similique ex dicta in nesciunt, corrupti, est adipisci illum deleniti asperiores. Necessitatibus soluta molestias incidunt! Architecto dolor aut eaque error, necessitatibus at tempora molestias laboriosam officiis sed facere aliquid inventore itaque nostrum voluptatem sunt placeat magni non. Ullam tenetur sunt voluptatem provident?
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
-    <hr>
-    <section class="section-4">
-        <div class="contact">
-            <h2 class="contact__subtitle">You can contact me through the following networks</h2>
-        </div>
-        <div class="contact__container-redes">
-            <div class="contact__container-facebook">
-                <h3>Facebook</h3>
-                <a href="">False Person*</a>
+        </section>
+    </main>
+    <aside>
+        <section class="section-4">
+            <div class="contact">
+                <h2 class="contact__subtitle">You can contact me through the following networks</h2>
             </div>
-            <div class="contact__container-whatsapp">
-                <h3>Whatsapp</h3>
-                <p>83636-847663-8002</p>
+            <div class="contact__container-redes">
+                <div class="contact__container-facebook contact-box-item">
+                    <h3><span><i class="fa fa-facebook-f"></i></span>Facebook</h3>
+                    <a href="">False Person*</a>
+                </div>
+                <div class="contact__container-whatsapp contact-box-item">
+                    <h3><span><i class="fa fa-whatsapp"></i></span>Whatsapp</h3>
+                    <p>83636-847663-8002</p>
+                </div>
+                <div class="contact__container-instagram contact-box-item">
+                    <h3><span><i class="fa fa-instagram"></i></span>Instragram</h3>
+                    <p>@falaseperson</p>
+                </div>
+                <div class="contact__container-telegram contact-box-item">
+                    <h3><span><i class="fa fa-telegram"></i></span>Telegram</h3>
+                    <p>ID 8djgGH0</p>
+                </div>
             </div>
-            <div class="contact__container-Instagram">
-                <h3>Instragram</h3>
-                <p>@falaseperson</p>
-            </div>
-            <div class="contact__container-telegram">
-                <h3>Telegram</h3>
-                <p>ID 8djgGH0</p>
-            </div>
-        </div>
-    </section>
+        </section>
+    </aside>
     <footer>
-        <p>Thanks for watching my Blog<span></span></p>
+        <p>Thanks for watching my Blog</p>
     </footer>
 </body>
 </html>
