v3, diseño casi terminado por completo y sistema responsive terminado, sólo falta arreglar una imagen en la sección de Who I am

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </figure>
                 <div class="me__text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tempore aliquid sequi voluptatem doloribus omnis? Neque eaque consectetur similique ex dicta in nesciunt, corrupti, est adipisci illum deleniti asperiores. Necessitatibus soluta molestias incidunt! Architecto dolor aut eaque error, necessitatibus at tempora molestias laboriosam officiis sed facere aliquid inventore itaque nostrum voluptatem sunt placeat magni non. Ullam tenetur sunt voluptatem provident?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde neque sunt in error, modi expedita eaque culpa hic laborum repudiandae deleniti! Doloribus, adipisci rem. Accusamus sit numquam facilis tempora quaerat at, nam quis sed. Nihil dicta maxime dolorem quas soluta vitae iure consequuntur unde voluptates! Velit adipisci autem sed, saepe, excepturi nobis nihil voluptatibus quisquam omnis consectetur commodi culpa reiciendis harum dicta explicabo. Libero, quisquam consectetur! Saepe reiciendis ratione placeat explicabo commodi repellendus tempore iusto beatae modi quam aliquam culpa officia eveniet sed nobis ducimus veniam excepturi minus, ipsam alias dolor, cumque enim! Sequi eaque eius rerum molestias dolor voluptatem ad sint laudantium blanditiis veniam odio voluptates labore soluta atque, dolore maiores earum voluptatum nostrum id tempora est quae recusandae?
                     </p>
                 </div>
             </div>
